# rayCastingVideoGame

./: CMakeLists.txt  LICENSE  Makefile  README.md
conf/: mapTest.conf  opps.conf
includes/: graphe.h  header.h  struct.h
src/: createGraphe.c  dijkstra.c  display.c  file.c  free.c  game.c  getNumNpc.c  loadMap.c  loadTexture.c  main.c  opps.c  player.c  quickSort.c  raycasting.c
